Closed Bug 1570182 Opened 6 years ago Closed 6 years ago

cursor: -moz-grab, -moz-grabbing, -moz-zoom-in, -moz-zoom-out ignored

Categories

(Core :: CSS Parsing and Computation, defect)

66 Branch
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla70
Tracking Status
firefox-esr60 --- unaffected
firefox-esr68 --- verified
firefox68 --- wontfix
firefox69 --- verified
firefox70 --- verified

People

(Reporter: jscher2000, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:68.0) Gecko/20100101 Firefox/68.0

Steps to reproduce:

Mouse over an element with any of these style rules:

cursor: -moz-grab
cursor: -moz-grabbing
cursor: -moz-zoom-in
cursor: -moz-zoom-out

Actual results:

The default pointer is used.

This has been reported since Firefox 66 on Google Sheets where the grab cursor provides an important cue that the user can move the selection. Google uses -moz-grab and -moz-grabbing in Firefox. For example:

Expected results:

The prefixed versions should be treated the same as the unprefixed versions until they are removed (please don't remove them right now!).

I haven't done a MozRegression, but this could be relevant:

Bug 1520154
Move CursorKind to cbindgen

[Tracking Requested - why for this release]:

MozRegression:

2019-07-30T20:54:09: INFO : platform_buildid: 20190116110105
2019-07-30T20:54:09: INFO : platform_changeset: cee37d07397cdffd16e63db1cdfff27a57d09eea
2019-07-30T20:54:09: INFO : platform_repository: https://hg.mozilla.org/integration/mozilla-inbound
2019-07-30T20:54:09: INFO : platform_version: 66.0a1
2019-07-30T20:54:27: INFO : Narrowed inbound regression window from [2d1497d9, 036c3b7c] (4 builds) to [cee37d07, 036c3b7c] (2 builds) (~1 steps left)
2019-07-30T20:54:27: DEBUG : Found commit message:
Bug 1520154 - Move cursor to cbindgen. r=boris

The only reason it was on style_traits is so that they could use it from some
other crates, but Servo eventually ends up getting the value from an integer, so
may as well pass it around and do that in the end of the process anyway.

Differential Revision: https://phabricator.services.mozilla.com/D16557

2019-07-30T20:54:27: DEBUG : Did not find a branch, checking all integration branches
2019-07-30T20:54:27: INFO : The bisection is done.

Has Regression Range: --- → yes
Has STR: --- → yes
Version: 68 Branch → 66 Branch
Component: Untriaged → CSS Parsing and Computation
Flags: needinfo?(emilio)
Product: Firefox → Core
Regressed by: 1520154
Status: UNCONFIRMED → NEW
Ever confirmed: true

Ouch, those keywords were handled in a very awkward way before my patch :(

Assignee: nobody → emilio
Flags: needinfo?(emilio)

This was an oversight in bug 1520154. We kept the -moz- version in the specified
value but not the computed value.

That's a very peculiar way of making aliases work. This makes them work
consistently as many other aliases instead.

Also, add an assert that would've caught this much much earlier.

Comment on attachment 9081991 [details]
Bug 1570182 - Fix cursor prefixed aliases to do the right thing. r=boris

Beta/Release Uplift Approval Request

  • User impact if declined: Some uncommon CSS cursors just work like auto. This affects some google sites according to comment 0.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: comment 0
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Simple patch that changes how prefixed cursors work so that they actually work :)
  • String changes made/needed: none

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: trivial fix for recent-ish regression
  • User impact if declined: see above
  • Fix Landed on Version:
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): see above.
  • String or UUID changes made by this patch: none
Attachment #9081991 - Flags: approval-mozilla-esr68?
Attachment #9081991 - Flags: approval-mozilla-beta?
Flags: qe-verify+
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/87fccc44abcc Fix cursor prefixed aliases to do the right thing. r=boris
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla70

Comment on attachment 9081991 [details]
Bug 1570182 - Fix cursor prefixed aliases to do the right thing. r=boris

Simple fix for a regression causing issues on some major sites. Approved for 69.0b11 and 68.1esr.

Attachment #9081991 - Flags: approval-mozilla-esr68?
Attachment #9081991 - Flags: approval-mozilla-esr68+
Attachment #9081991 - Flags: approval-mozilla-beta?
Attachment #9081991 - Flags: approval-mozilla-beta+
QA Whiteboard: [qa-triaged]

I have reproduced this issue using Firefox 70.0a1 (2019.07.30) on Win 10 x64.
I can confirm this issue is fixed, I verified using Firefox latest nightly 70.0a1 on Win 10 x64, Ubuntu 18.04 x64 and macOS 10.14, waiting for fix in beta 69.0b11 and 68.1esr.

I can confirm this issue is fixed, I verified using Firefox 69.0b11 and 68.1esr builds from: https://treeherder.mozilla.org/#/jobs?repo=mozilla-esr68&fromchange=537ea23be18d4d69a3059b10c7500b7f36c49186 on Win 10 x64, Ubuntu 18.04 x64 and macOS 10.14.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: